add swagger login + refactoring login
